syntax = "proto3";

import "Payload.proto";

option java_package = "com.bigcode.proto";
option java_outer_classname = "SeasonProtos";

message Season {
    int32 id = 1;
    Payload key = 2;
}

message SeasonArr {
    repeated Season seasons = 1;
}